# ansible-role-tripleo-overcloud-images-prep

./: .gitignore  README.md  setup.cfg
defaults/: main.yml
handlers/: main.yml
tasks/: main.yml
templates/: prep-overcloud-images.sh.j2
tests/: test.yml
vars/: main.yml
