[metadata]
name = ansible-role-tripleo-overcloud-images-prep
summary = ansible-role-tripleo-overcloud-images-prep - A ansible role for  preparing the images for overcloud deploy
description-file =
    README.md
author = RDO-CI Team
author-email = rlandy@redhat.com
home-page = https://github.com/rlandy/ansible-role-tripleo-overcloud-images-prep
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    usr/local/share/ansible/roles/baremetal-overcloud/defaults = defaults/*
    usr/local/share/ansible/roles/baremetal-overcloud/handlers = handlers/*
    usr/local/share/ansible/roles/baremetal-overcloud/meta = meta/*
    usr/local/share/ansible/roles/baremetal-overcloud/tasks = tasks/*
    usr/local/share/ansible/roles/baremetal-overcloud/templates = templates/*
    usr/local/share/ansible/roles/baremetal-overcloud/files = files/*
    usr/local/share/ansible/roles/baremetal-overcloud/tests = tests/*
    usr/local/share/ansible/roles/baremetal-overcloud/vars = vars/*
    playbooks = playbooks/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
